# rust_todo_app

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  deny.toml  deny.toml.backup  docker-compose.yml  lcov.info  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  dependencies.yml  lint.yml  release.yml  security.yml
.sqlx/: query-105b863f07c14d1e1d4885074fbfad52ccd7de168d44edde4cc8f71763e347e6.json  query-218ec0438e4d18d0a63bcbb44e20517fc13eab52ca7893cf65b17559b4ea56ab.json  query-2445bafa78ffdea1bb77950f519d7f65d2f9589a8e05d26c5f18a1c2e1f1945c.json  query-2e50f1ad2b9bb93d6a7bc763deebf586ef1de70e3bcf7d89154f43a7a64e7504.json  query-49565939354beb8c0ff2b8c46b7fd8b85c4689db493f8b4bae755d3be8844444.json  query-66ae336a14134cb110a866cbaaeea6eb0e9c294c15320d6ca47fc90effef94ea.json  query-8d7fb841b8343d5090f0e3e380083a9e1f8a0649ca390584ad16598916c3abe1.json  query-916e69f5d84960df7d260ed3ee725255b8ec00a2e474a8d30c894080ca096bb9.json  query-a031d5b57e6d940198c691936dd365536c582c1481c8524ddcc6f4a8c1b58134.json  query-f570d6672f8c5ccd90b51194093681660a6b0edd163b5b57bdb25144fe463000.json
db/: init.sql
docs/: clippy-troubleshooting.md  github-actions.md  security-troubleshooting.md
docs/architecture/: 01-system-context.md  02-container-diagram.md  03-component-diagram.md  04-code-diagram.md  05-deployment.md  06-security.md  README.md
scripts/: pre-commit.sh
src/: auth.rs  main.rs
src/modules/: common.rs  mod.rs
src/modules/health/: mod.rs  routes.rs  service.rs
src/modules/health/interfaces/: health_response.rs  mod.rs
src/modules/login/: mod.rs  routes.rs  service.rs
src/modules/login/interfaces/: login_interfaces.rs  mod.rs
src/modules/login/repository/: login_repository.rs  mod.rs
src/modules/signup/: mod.rs  routes.rs  service.rs
src/modules/signup/interfaces/: mod.rs  signup_interfaces.rs  user_interfaces.rs
src/modules/signup/repository/: mod.rs  signup_repository.rs  user_repository.rs
src/modules/user/: interfaces.rs  mod.rs  repository.rs  routes.rs  service.rs
src/swagger/: doc_config.rs
src/utils/: fone_validation.rs  mod.rs  password.rs  required_fields.rs
