[package]
name = "rust_todo_app"
version = "0.1.0"
edition = "2021"
description = "A todo application built with Rust, Axum, and OpenAPI documentation"
license = "MIT"
repository = "https://github.com/gaspecian/rust_todo_app"
readme = "README.md"
keywords = ["todo", "axum", "api", "rust", "web"]
categories = ["web-programming"]

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
dotenvy = "0.15.7"
rand_core = { version = "0.9.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }
time = { version = "0.3.41", features = ["serde"] }

# SQLx for PostgreSQL
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "time" ] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
async-trait = "0.1.89"
email_address = "0.2.9"
regex = "1.11.2"
once_cell = "1.21.3"
serde_json = "1.0.143"

[dev-dependencies]
# Testing and development tools
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
# Clippy lint groups with proper priorities
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints to allow (override pedantic/nursery)
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
needless_for_each = "allow"

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
